{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 76,
  "lineage": "3a94beab-ecdb-ee0e-28a6-0ec279dd3fb4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:security-group/sg-0901635b94cb09b24",
            "description": "Security group for CV Matcher Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0901635b94cb09b24",
            "ingress": [],
            "name": "cv-matcher-api-dev-sg",
            "name_prefix": "",
            "owner_id": "376337229415",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "cv-matcher-api-dev-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cv-matcher-api-dev-sg",
              "Project": "cv-matcher-graphrag"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7628a7a70e7e0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376337229415",
            "id": "sg-0901635b94cb09b24",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "neptune",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376337229415:security-group/sg-0f93bb3c171c8965c",
            "description": "Security group for Neptune GraphRAG cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f93bb3c171c8965c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Neptune from VPC",
                "from_port": 8182,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8182
              }
            ],
            "name": "cv-matcher-neptune-sg",
            "name_prefix": "",
            "owner_id": "376337229415",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "cv-matcher-neptune-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cv-matcher-neptune-sg",
              "Project": "cv-matcher-graphrag"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c7628a7a70e7e0f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "376337229415",
            "id": "sg-0f93bb3c171c8965c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "neptune_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8182,
            "id": "sgrule-2489773422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f93bb3c171c8965c",
            "security_group_rule_id": "sgr-0aba225ad161818c3",
            "self": false,
            "source_security_group_id": "sg-0901635b94cb09b24",
            "timeouts": null,
            "to_port": 8182,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.neptune"
          ]
        }
      ]
    }
  ]
}